<resources>
    <string name="app_name">WhosPlayer</string>

    <!-- Help -->
    <string name="menu_action_help">help</string>
    <string name="menu_action_report">report</string>

    <string name="whos_player_help_text">O objetivo do jogo é identificar o jogador com base nos emblemas dos clubes em que ele atuou. Por exemplo:</string>
    <string name="whos_player_help_second_text">Ao analisar a trajetória completa do jogador, ou seja, os clubes onde ele já atuou ou está atualmente, e desejar fazer uma suposição, você pode simplesmente preencher o espaço em branco com o nome pelo qual o jogador é conhecido.</string>
    <string name="whos_player_help_third_text">Mesmo que você tenha verificado os times pelos quais o jogador passou e ainda não tenha descoberto sua identidade, não se preocupe, preparamos algumas dicas para ajudá-lo nessa busca.\nOferecemos duas opções de dicas para facilitar a sua descoberta. A primeira delas é representada por uma lâmpada (localizada à direita da tela). Ao solicitá-la, você receberá até 3 pistas. A primeira pista será a data de nascimento do jogador, a segunda indicará a posição em que ele atua, e a terceira fornecerá sua nacionalidade.</string>
    <string name="whos_player_help_fourth_text">A segunda opção de dica que disponibilizamos é um calendário (localizado à esquerda da tela). Clicando nele, você poderá ver a data em que o jogador atuou em cada clube (caso haja um único ano, quer dizer que ele ainda atua pelo clube).</string>
    <string name="whos_player_help_fifth_text">Após utilizar as dicas fornecidas ou, caso não precise delas, insira o jogador que você acredita ser o correto no campo de texto em branco abaixo desta forma:</string>
    <string name="whos_player_help_sixth_text">Quando você terminar de escrever o nome ou apelido do jogador, o botão para confirmar o nome irá sair disso</string>
    <string name="whos_player_help_seventh_text">Para isto</string>
    <string name="whos_player_help_eighth_text">Então você irá poder ter a confirmação clicando no botão "OK", caso seu palpite esteja errado, a tela do seu celular irá "chacoalhar" alertando que você errou o palpite, caso esteja certo, será encaminhado para o próximo nivel.</string>
    <string name="whos_player_help_cotinue_button_label">VAMOS JOGAR</string>

    <string name="whos_player_help_neymar_years_played_santos">2009-2013</string>
    <string name="whos_player_help_neymar_years_played_barcelona">2013–2017</string>
    <string name="whos_player_help_neymar_years_played_psg">2017–2023</string>
    <string name="whos_player_help_neymar_years_played_al_hilal">2023</string>

    <string name="whos_player_help_first_tip_label">Dica 1</string>
    <string name="whos_player_help_second_tip_label">Dica 2</string>
    <string name="whos_player_help_third_tip_label">Dica 3</string>

    <string name="whos_player_help_neymar_first_tip">A data de nascimento do Jogador é 5 de fevereiro de 1992.</string>
    <string name="whos_player_help_neymar_second_tip">A posição do jogador é Atacante.</string>
    <string name="whos_player_help_neymar_third_tip">Este jogador é da nacionalidade: Brasileiro.</string>



    <!-- Whos Player -->
    <string name="whos_player_confirmation_button">OK</string>
    <string name="whos_player_text_level">LEVEL %d</string>

    <!-- Tips Alert Dialog -->
    <string name="whos_player_alert_dialog_title">Dicas</string>
    <string name="whos_player_custom_tips_text_title">Dica %s:</string>
    <string name="whos_player_custom_tips_text_value_tools">O país do Jogador é %s.</string>
    <string name="whos_player_tips_number_animation">-1</string>

    <!-- Custom Error Screen -->
    <string name="whos_player_error_screen_img">imagem de uma bola na trave</string>
    <string name="whos_player_error_screen_text">Ops, bola na trave não altera o placar.</string>
    <string name="whos_player_error_screen_second_text">Desculpe, tente novamente mais tarde.</string>

    <!-- Custom Finish Screen -->
    <string name="whos_player_finish_screen_text">Que Goleada!</string>
    <string name="whos_player_finish_screen_second_text">Parabéns, você terminou todos os jogadores, neste momento estamos trabalhando para adicionar cada vez mais, para que você possa continuar jogando.</string>


    <!-- Report Screen -->
    <string name="whos_player_report_screen_developed_by">Desenvolvido por</string>
    <string name="whos_player_report_screen_developers">Daniel Escobar\nArthur Oliveira</string>
    <string name="whos_player_report_screen_text">Para dúvidas, sugestões ou informar algum problema, envie um email para</string>
    <string name="whos_player_report_screen_second_text">Envie-nos um email relatando algum erro, e também dando sujestões de novos jogadores</string>
    <string name="whos_player_report_screen_email">qualjogador1@gmail.com</string>
    <string name="whos_player_report_screen_version_code">Versão 1.0.0</string>

    <!-- Whos Player -->
    <string name="whos_player_onboarding_skip_button">PULAR</string>
    <string name="whos_player_onboarding_welcome_title">BEM VINDO</string>
    <string name="whos_player_onboarding_welcome_text">Agradecemos profundamente por ter feito o download do nosso jogo. Para garantir que você tenha a melhor experiência, gostaríamos de oferecer uma breve introdução sobre como ele funciona. Estamos ansiosos para que você se divirta ao máximo. Até breve!</string>
    <string name="whos_player_onboarding_initial_title">CLUBES</string>
    <string name="whos_player_onboarding_initial_text">Em nosso jogo, o desafio é acertar o nome ou apelido dos jogadores com base nos times pelos quais eles já passaram ou estão atualmente.</string>
    <string name="whos_player_onboarding_nickname_title">NOME/APELIDO</string>
    <string name="whos_player_onboarding_nickname_text">Assim que identificar o jogador, basta inserir o nome no campo de texto e confirmar.</string>
    <string name="whos_player_onboarding_tips_title">Ajuda</string>
    <string name="whos_player_onboarding_tips_text">Também oferecemos uma opção de ajuda para aqueles que não estão familiarizados com as regras do jogo. Lá, explicamos detalhadamente o passo a passo de como funciona, para que você possa se divertir ao máximo.</string>
    <string name="whos_player_onboarding_fun_title">DIVIRTA-SE</string>
    <string name="whos_player_onboarding_fun_text">Desejamos que você aproveite ao máximo o jogo. Se você gostar ou tiver alguma sugestão, ficaríamos gratos se você pudesse deixar sua avaliação no Google Play e compartilhar sugestões de novos jogadores para serem considerados em futuras atualizações. Seu feedback é valioso para nós!</string>



    <!-- ADMOB -->
    <string name="whos_player_banner_ad_test">ca-app-pub-6036183629578343~5450720964</string>
    <string name="whos_player_interstitial_ad_test">ca-app-pub-3940256099942544/1033173712</string>

    <string name="whos_player_banner_ad">ca-app-pub-6036183629578343/7502169231</string>
    <string name="whos_player_calendar_ad">ca-app-pub-6036183629578343/9216923195</string>
    <string name="whos_player_level_ad">ca-app-pub-6036183629578343/6417152427</string>




</resources>