<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/custom_splash_screen_logo"
        android:layout_width="@dimen/whos_player_200dp"
        android:layout_height="@dimen/whos_player_200dp"
        android:contentDescription="@string/whos_player_error_screen_img"
        android:src='@drawable/bola_na_trave' />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/whos_player_14sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/whos_player_error_screen_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/whos_player_12sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/whos_player_error_screen_second_text" />

</LinearLayout>