<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/skip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/whos_player_12dp"
            android:background="@android:color/transparent"
            android:textSize="@dimen/whos_player_20sp"
            android:text="@string/whos_player_onboarding_skip_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <include
            android:id="@+id/nickname_letter_by_letter"
            layout="@layout/layout_whos_player_help_letter_by_letter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/whos_player_120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/skip_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/whos_player_60dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nickname_letter_by_letter">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/whos_player_16dp"
                android:gravity="center"
                android:text="@string/whos_player_onboarding_nickname_title"
                android:textColor="@color/black"
                android:textSize="@dimen/whos_player_24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nickname_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/whos_player_16dp"
                android:gravity="center"
                android:text="@string/whos_player_onboarding_nickname_text"
                android:textColor="@color/black"
                android:textSize="@dimen/whos_player_16sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>